# tide-talus

./: Cargo.toml  IMPLEMENTATION_PLAN.md  SECURITY.md  talus.md
docs/: dkg-production-completion-plan.md  it-vss-rabin-ben-or.md  no-public-a-secret-linear-images.md  no-rejected-z-leakage.md  preprocessing-bcc-performance.md  production-grade-roadmap.md  production-optimization-principles.md  threshold-scheme-evaluation.md
docs/archive/: IMPLEMENTATION_PLAN-history.md  README.md  dkg-production-completion-plan.md  dkg-production-performance.md  no-duplication-architecture-audit.md  optimization-principles.md  original-talus-attack-tests.md  preprocessing-bcc-performance.md  production-grade-roadmap.md
talus-bench/: Cargo.toml
talus-bench/src/: lib.rs
talus-core/: Cargo.toml
talus-core/src/: bcc.rs  cef.rs  decompose.rs  fips204_adapter.rs  fips204_encoding.rs  fips204_ntt.rs  fips204_verify.rs  lib.rs  params.rs  performance.rs  poly.rs
talus-core/tests/: fips204_public_parity.rs  public_a_secret_attack.rs  tidecoin_consensus_parity.rs
talus-dkg/: ARCHITECTURE.md  Cargo.toml
talus-dkg/src/: error.rs  it_vss.rs  lib.rs  power2round.rs  scalar_vss.rs  shamir.rs  test_dealer.rs  tests.rs  types.rs
talus-dkg/src/power2round/: dev_backends.rs
talus-mpc/: Cargo.toml
talus-mpc-core/: Cargo.toml
talus-mpc-core/src/: auth.rs  beaver.rs  bit.rs  carry.rs  gf128.rs  lib.rs
talus-mpc/src/: lib.rs  local.rs  local_dev.rs  online.rs  online_dev.rs
talus-tests/: Cargo.toml
talus-tests/src/: adversarial_tests.rs  cases.rs  dkg_power2round_driver.rs  dkg_signing_helpers.rs  dkg_signing_tests.rs  lib.rs  mpc_adversarial_cases.rs  online_adversarial_cases.rs  preprocessing_adversarial_cases.rs  production_api_scan.rs  properties.rs  wire_adversarial_cases.rs  wire_tests.rs
talus-wire/: Cargo.toml
talus-wire/src/: lib.rs
