[package]
name = "talus-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "bench", "fips204-adapter"]
std = ["talus-core/std"]
alloc = ["talus-core/alloc"]
serde-wire = []
test-dealer = []
bench = []
fips204-adapter = ["talus-core/fips204-adapter"]

[dependencies]
talus-core = { path = "../talus-core", default-features = false }

[lints]
workspace = true
