[package]
name = "talus-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "fips204-adapter"]
std = []
alloc = []
serde-wire = []
test-dealer = []
bench = []
fips204-adapter = []

[dependencies]
fips204.workspace = true
sha3.workspace = true
zeroize.workspace = true

[dev-dependencies]
fips204.workspace = true

[lints]
workspace = true
