[package]
name = "talus-mpc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "fips204-adapter"]
std = ["talus-core/std", "talus-dkg/std", "talus-mpc-core/std", "talus-wire/std"]
alloc = ["talus-core/alloc", "talus-dkg/alloc", "talus-mpc-core/alloc", "talus-wire/alloc"]
serde-wire = ["talus-mpc-core/serde-wire", "talus-wire/serde-wire"]
test-dealer = ["talus-mpc-core/test-dealer"]
bench = ["talus-mpc-core/bench"]
fips204-adapter = ["talus-core/fips204-adapter"]
paper-fast-dev = []
production-release-checks = []

[dependencies]
sha3.workspace = true
talus-core = { path = "../talus-core", default-features = false }
talus-dkg = { path = "../talus-dkg", default-features = false }
talus-mpc-core = { path = "../talus-mpc-core", default-features = false }
talus-wire = { path = "../talus-wire", default-features = false }
zeroize.workspace = true

[dev-dependencies]
fips204.workspace = true

[lints]
workspace = true
