[package]
name = "talus-wire"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
alloc = []
serde-wire = []
test-dealer = []
bench = []
paper-fast-dev = []
production-release-checks = []

[dependencies]
sha3.workspace = true

[dev-dependencies]
fips204.workspace = true
ml-kem.workspace = true

[lints]
workspace = true
